# Statistic_Calc

./: .gitignore  .gitignore.bak  README.md  test10.csv
Kalkulator/: CMakeLists.txt  IsAlphaPlus.cpp  IsAlphaPlus.h  Kalkulator.cpp  Kalkulator.h  dynarray.cpp  dynarray.h
Sample data/: RandomDataGen.py  plot.py  test.csv  words.csv
Sample_data/: RandomDataGen.py  dejta.txt  dictionary.csv  eng.csv  fulleng.csv  nummers.txt  short.csv  shortnum.csv
